<resources>
    <string name="app_name">AplicacionMoviles</string>
    <string name="title_activity_home">Map</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="seccion_1">Sección 1</string>
    <string name="seccion_2">Sección 2</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="opcion_1">Opción 1</string>
    <string name="opcion_2">Opción 2</string>
    <string name="seccion_3">Sección 3</string>
    <string name="usuario">Usuario</string>
    <string name="menu_abierto">Menu Abierto</string>
    <string name="menu_cerrado">Menu Cerrado</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="title_activity_drawer_layout">Proyecto Moviles</string>
    <string name="title_activity_maps">Map</string>
    <string name="inputUsuario">Usuario</string>
    <string name="inputNombre">Nombre Completo</string>
    <string name="inputContraseña">Escribe tu contraseña</string>
    <string name="btn_registro">REGISTRAR</string>
    <string name="menu_mascotas">Mascotas</string>
    <string name="menu_pasea">Paseos</string>
    <string name="menu_request">Mapa</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="menu_cerrar">Cerrar Sesión</string>
    <string name="checkText">Deseo pasear mascotas</string>
    <string name="namePet">Nombre de la mascota</string>
    <string-array name="planets_array">
        <item>Labrador</item>
        <item>Husky</item>
        <item>Bulldog</item>
        <item>Pug</item>
        <item>Pomerania</item>
        <item>Golden</item>
        <item>Poodle</item>
        <item>Pastor Alemán</item>
    </string-array>
    <string-array name="tam_pets">
        <item>Chico</item>
        <item>Mediano</item>
        <item>Grande</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="inputMail">Correo electronico</string>
    <string name="addMascota">Agregar Mascota</string>
    <string name="solicitar_paseo">Solicitar Paseo</string>
    <string name="mascota_a_pasear">Mascota a pasear:</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="aceptar_solicitud">Aceptar solicitud</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registrate">Registrate</string>
    <string name="aceptar_paseo">Aceptar paseo</string>
    <string name="finalizar_recorrido">Finalizar recorrido</string>
</resources>
