<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4285EF"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textPets"
        android:textColor="#ffffff"
        android:text="@string/mascota_a_pasear"
        android:layout_marginTop="100dp"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <Spinner
        android:id="@+id/listPets"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textPets"
        android:layout_marginStart="15dp"

        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/namePet"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRequest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_below="@+id/listPets"
        android:layout_marginTop="50dp"
        android:text="@string/solicitar_paseo"
        android:textAlignment="center"
        android:background="#A0A0F0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</RelativeLayout>